Fix layout and add profile detail

--- a/src/jade/layout/resume-layout.jade
+++ b/src/jade/layout/resume-layout.jade
@@ -23,18 +23,17 @@ block header
 block content
   article.content.row
     article.column-6.first.column
-      block education
-      block language
+      block profile
       block experience
     article.column-6.last.column
       block skills
+      block education
+      block language
       block about
-
 
 block footer
   footer
     block repo
-
 
 block sidebar
   aside
