--- a/src/less/components/skills.less
+++ b/src/less/components/skills.less
@@ -16,13 +16,14 @@
     font-weight: bold;
 }
 
-.skills-miscellaneous,
+.skills-miscellaneous,.skills-codemanager,
 .skills-hobbies {
     margin-top: @padding-large-vertical;
     padding: 0;
 }
 
 .skills-miscellaneous .skills-item-description,
+.skills-codemanager .skills-item-description,
 .skills-hobbies .skills-item-description {
     list-style-type: none;
 }
