Add internetional resume(_zh-CN|_en-US).json and url visit path

--- a/src/jade/layout/resume-layout.jade
+++ b/src/jade/layout/resume-layout.jade
@@ -5,7 +5,7 @@ block title
   title= resume_title
 
 block style
-  link(rel='stylesheet', href="index.css")
+  link(rel='stylesheet', href="../index.css")
 
 block header
   header.row
